--- a/user/templates/user/master.html
+++ b/user/templates/user/master.html
@@ -11,13 +11,39 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+        {% block header %}
+
+        {% endblock %}
+
 </head>
 
 <body>
 
-    {% block content %}
 
-    {% endblock %}
+    <div class="container-fluid">
+
+        <div class="row">
+            <div class="col-md-12">
+                <nav class="navbar navbar-light bg-info">
+                    <div class="container-fluid">
+                      <a class="navbar-brand">TodoApp</a>
+                      
+                        <a class="btn btn-primary" type="button" href="{% url 'user:login' %}" >Login</a>
+                      
+                    </div>
+                  </nav>
+            </div>
+    
+            <div class="col-md-12">
+                {% block content %}
+
+                {% endblock %}
+                
+            </div>
+        </div>
+    </div>
+
+   
 </body>
 
 </html>
