--- a/task/templates/task/task_list.html
+++ b/task/templates/task/task_list.html
@@ -1,15 +1,21 @@
 {% extends 'task/master.html' %}
  
 {% block content %} 
- 
 <div>
-   <div>
-    <select name="" id="" class="form-control">
-      <option value="">Pending</option>
-      <option value="">Compleated</option>
-    </select>
-    
+  <form method="GET">
+    {% csrf_token %}
+    <div class="input-group mb-3">
+      <label class="input-group-text" for="inputGroupSelect01">select category</label>
+      <select class="form-select" id="inputGroupSelect01" name="status">
+        <option selected value="pending">pending</option>
+        <option value="complete">all</option>
+        <option value="complete">complete</option>        
+      </select>
+      <button class="btn btn-primary">filter</button>
+    </div>
    </div>
+  </form>  
+<div> 
     <table id="dtBasicExample" class="table table-hover table-primary" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -47,19 +53,40 @@
             <td>{{item.completion_date}}</td>
             <td>{{item.status}}</td>
             <td><a href="{% url 'task:edit' item.id %}" class="btn btn-info"><i class="bi bi-pencil-square"></i></a>
-             <a href="" class="btn btn-danger"><i class="bi bi-trash3"></i></a>
-            </td>
-            
-          </tr>        
-              
-          {% endfor%}
-         
-          
-          
+             <a href="{% url 'task:delete' item.id %}" class="btn btn-danger"><i class="bi bi-trash3"></i></a>
+            </td>            
+          </tr>
         </tbody>
-     
-      </table>
-      
+          {% endfor%}
+        </tbody>     
+      </table>     
 </div>
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    {% if tasks.has_previous %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ tasks.previous_page_number }}">Previous</a>
+    </li>
+    {% endif %}
+    {% for num in tasks.paginator.page_range %}
+    {% if tasks.number == num %}
+    <li class="page-item active" aria-current="page">
+      <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+    </li>
+    {% else %}
+    {% if num > tasks.number|add:'-5' and num < tasks.number|add:'5' %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+    </li>
+    {% endif %}
+    {% endif %}
+    {% endfor %}
+    {% if tasks.has_next %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ tasks.next_page_number }}">Next</a>
+    </li>
+    {% endif %}
+  </ul>
+</nav>
 
 {% endblock %}
